# wikipedia_retriever

./: README.md  client.py  main.py  pyproject.toml
