[tool.poetry]
name = "wikipedia-retriever"
version = "0.1.0"
description = ""
authors = ["Delphine Tai-Beauchamp <delphinetaibeauchamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
